--- a/src/components/cards/ProfileCard/ProfileCard.css
+++ b/src/components/cards/ProfileCard/ProfileCard.css
@@ -73,3 +73,7 @@
   background-color: white;
   color: black;
 }
+
+.black-btn-follow {
+  border: 1px solid white;
+}
